gadjid/src/snapshots/gadjid__test__small-DAG7-vs-DAG8.snap
---
source: src/lib.rs
expression: "test(&format!(\"200{:0>2}.DAG-10\", true_id),\n    &format!(\"200{:0>2}.DAG-10\", guess_id))"
---
g_true: 20007.DAG-10
g_guess: 20008.DAG-10
ancestor_aid:
  - 0
  - 0
oset_aid:
  - 0
  - 0
parent_aid:
  - 0
  - 0
shd:
  - 1
  - 45
T:
  - 0
  - 1
  - 3
  - 9
NAM: []
Y: 4
random_adj:
  - 5
  - 6
  - 8
proper_ancestors:
  - 2
  - 4
  - 5
  - 6
  - 7
  - 8
oset:
  - 3
possible_descendants:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
parent_adjustment_NVA:
  - 0
  - 2
  - 3
  - 5
  - 6
  - 7
  - 9
ancestor_adjustment_NVA:
  - 0
  - 2
  - 3
  - 5
  - 6
  - 7
  - 9
nondescendant_adjustment_NVA: []
oset_adjustment_NVA:
  - 3
empty_adjustment_NVA: []
random_Z_adjustment_NVA:
  - 5
  - 6
  - 8
