gadjid/src/snapshots/gadjid__test__small-DAG9-vs-DAG10.snap
---
source: src/lib.rs
expression: "test(&format!(\"200{:0>2}.DAG-10\", true_id),\n    &format!(\"200{:0>2}.DAG-10\", guess_id))"
---
g_true: 20009.DAG-10
g_guess: 20010.DAG-10
ancestor_aid:
  - 0.5666666666666667
  - 51
oset_aid:
  - 0.4777777777777778
  - 43
parent_aid:
  - 0.5777777777777777
  - 52
shd:
  - 0.3333333333333333
  - 15
T:
  - 0
  - 3
  - 8
NAM: []
Y: 6
random_adj:
  - 1
proper_ancestors:
  - 1
  - 6
oset:
  - 3
possible_descendants:
  - 0
  - 1
  - 3
  - 4
  - 6
  - 8
parent_adjustment_NVA:
  - 1
  - 2
  - 6
  - 8
ancestor_adjustment_NVA:
  - 1
  - 2
  - 3
  - 6
  - 8
nondescendant_adjustment_NVA:
  - 1
  - 2
  - 4
  - 5
  - 6
  - 7
  - 9
oset_adjustment_NVA:
  - 1
  - 2
  - 3
  - 6
empty_adjustment_NVA:
  - 1
  - 2
  - 6
random_Z_adjustment_NVA:
  - 1
  - 2
  - 6
